SearchRouter autocomplete z-index issue fixed

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -36,7 +36,7 @@ $searchRouterInputWidth:290px;
 }
 // dublicate ! > components
 .ui-autocomplete{
-  z-index: 1000;
+  z-index: 20000;
   background-color: #FFF;
   color:$secondColor;
   cursor:pointer;
